--- a/kitabganj_server/package.json
+++ b/kitabganj_server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "mongodb": "^6.6.2",
     "nodemon": "^3.1.1"
